--- a/ClientSide/src/MyGUI.form
+++ b/ClientSide/src/MyGUI.form
@@ -29,7 +29,7 @@
           <grid row="6" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Send Maintenance Request"/>
+          <text value="Send Business Order Request"/>
         </properties>
       </component>
       <component id="32a3d" class="javax.swing.JButton" binding="bookAMeetingRoomButton" default-binding="true">
@@ -64,12 +64,12 @@
           </model>
         </properties>
       </component>
-      <component id="781fa" class="javax.swing.JCheckBox" binding="superVisorCheckBox" default-binding="true">
+      <component id="781fa" class="javax.swing.JCheckBox" binding="supervisorCheckBox">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="SuperVisor"/>
+          <text value="Supervisor"/>
         </properties>
       </component>
       <component id="66fd4" class="javax.swing.JCheckBox" binding="workerCheckBox" default-binding="true">
